--- a/source/catalog.html
+++ b/source/catalog.html
@@ -243,50 +243,52 @@
     <section class="sub-products">
       <div class="sub-products__wrapper">
         <h2 class="sub-products__title">Дополнительные товары</h2>
-        <ul class="sub-products__list">
-          <li class="sub-products__item">
-            <h3 class="sub-products__item-title">Сахарозаменитель</h3>
-            <table class="sub-products__table">
-              <tr>
-                <td class="sub-products__desc">1 упаковка (100 г)</td>
-                <td class="sub-products__price">200 ₽</td>
-              </tr>
-            </table>
-            <a class="sub-products__link-order" href="#">Заказать</a>
-          </li>
-          <li class="sub-products__item">
-            <h3 class="sub-products__item-title">Питьевая вода</h3>
-            <table class="sub-products__table">
-              <tr>
-                <td class="sub-products__desc">5 литров</td>
-                <td class="sub-products__price">50 ₽</td>
-              </tr>
-            </table>
-            <a class="sub-products__link-order" href="#">Заказать</a>
-          </li>
-          <li class="sub-products__item">
-            <h3 class="sub-products__item-title">Молоко</h3>
-            <table class="sub-products__table">
-              <tr>
-                <td class="sub-products__desc">1 литр</td>
-                <td class="sub-products__price">100 ₽</td>
-              </tr>
-            </table>
-            <a class="sub-products__link-order" href="#">Заказать</a>
-          </li>
-          <li class="sub-products__item">
-            <h3 class="sub-products__item-title">Витамины</h3>
-            <table class="sub-products__table">
-              <tr>
-                <td class="sub-products__desc">1 упаковка (30 г)</td>
-                <td class="sub-products__price">300 ₽</td>
-              </tr>
-            </table>
-            <a class="sub-products__link-order" href="#">Заказать</a>
-          </li>
-        </ul>
-        <div class="sub-products__gift">
-          <p class="sub-products__gift-desc">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="sub-products__content">
+          <ul class="sub-products__list">
+            <li class="sub-products__item">
+              <h3 class="sub-products__item-title">Сахарозаменитель</h3>
+              <table class="sub-products__table">
+                <tr>
+                  <td class="sub-products__desc">1 упаковка (100 г)</td>
+                  <td class="sub-products__price">200 ₽</td>
+                </tr>
+              </table>
+              <a class="sub-products__link-order" href="#">Заказать</a>
+            </li>
+            <li class="sub-products__item">
+              <h3 class="sub-products__item-title">Питьевая вода</h3>
+              <table class="sub-products__table">
+                <tr>
+                  <td class="sub-products__desc">5 литров</td>
+                  <td class="sub-products__price">50 ₽</td>
+                </tr>
+              </table>
+              <a class="sub-products__link-order" href="#">Заказать</a>
+            </li>
+            <li class="sub-products__item">
+              <h3 class="sub-products__item-title">Молоко</h3>
+              <table class="sub-products__table">
+                <tr>
+                  <td class="sub-products__desc">1 литр</td>
+                  <td class="sub-products__price">100 ₽</td>
+                </tr>
+              </table>
+              <a class="sub-products__link-order" href="#">Заказать</a>
+            </li>
+            <li class="sub-products__item">
+              <h3 class="sub-products__item-title">Витамины</h3>
+              <table class="sub-products__table">
+                <tr>
+                  <td class="sub-products__desc">1 упаковка (30 г)</td>
+                  <td class="sub-products__price">300 ₽</td>
+                </tr>
+              </table>
+              <a class="sub-products__link-order" href="#">Заказать</a>
+            </li>
+          </ul>
+          <div class="sub-products__gift">
+            <p class="sub-products__gift-desc">Закажите все и получите чехол для кота в подарок!</p>
+          </div>
         </div>
       </div>
     </section>
