--- a/source/index.html
+++ b/source/index.html
@@ -59,6 +59,7 @@
         </picture>
         <a class="hero__nutrition-program" href="./form.html">Подобрать программу</a>
       </div>
+
     </section>
     <section class="programs">
       <h2 class="visually-hidden">Программы похудения или набора массы</h2>
@@ -97,18 +98,18 @@
           <span class="example__results-time">60 дней</span>
         </div>
         <span class="example__spending-money">Затраты на питание: 15 000 руб.</span>
-        <div class="demonstration">
-          <picture>
-            <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="./images/cat-before-tablet-desktop@1x.png 1x, ./images/cat-before-tablet-desktop@2x.png 2x">
-            <img class="demonstration__demonstration-image demonstration__demonstration-image--before" src="./images/cat-before-mobile@1x.png" srcset="./images/cat-before-mobile@2x.png 2x" width="280" height="256" alt="Демонстрация изменений">
-          </picture>
-          <picture>
-            <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="./images/cat-after-tablet-desktop@1x.png 1x, ./images/cat-after-tablet-desktop@2x.png 2x">
-            <img class="demonstration__demonstration-image demonstration__demonstration-image--after" src="./images/cat-after-mobile@1x.png" srcset="./images/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Демонстрация изменений">
-          </picture>
-          <div class="demonstration__slider" role="slider" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" aria-labelledby="slider-label"></div>
-          <span class="visually-hidden" id="slider-label">Сравнение фотографий</span>
-        </div>
+      </div>
+      <div class="demonstration">
+        <picture>
+          <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="./images/cat-before-tablet-desktop@1x.png 1x, ./images/cat-before-tablet-desktop@2x.png 2x">
+          <img class="demonstration__demonstration-image demonstration__demonstration-image--before" src="./images/cat-before-mobile@1x.png" srcset="./images/cat-before-mobile@2x.png 2x" width="280" height="256" alt="Демонстрация изменений">
+        </picture>
+        <picture>
+          <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="./images/cat-after-tablet-desktop@1x.png 1x, ./images/cat-after-tablet-desktop@2x.png 2x">
+          <img class="demonstration__demonstration-image demonstration__demonstration-image--after" src="./images/cat-after-mobile@1x.png" srcset="./images/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Демонстрация изменений">
+        </picture>
+        <div class="demonstration__slider" role="slider" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" aria-labelledby="slider-label"></div>
+        <span class="visually-hidden" id="slider-label">Сравнение фотографий</span>
       </div>
     </section>
   </main>
@@ -121,18 +122,8 @@
         </address>
       </div>
     </div>
-    <div class="footer__map-container">
-      <iframe class="footer__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991047846933!2d30.32050837715263!3d59.9387941749152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0xa24b26c0d196de71!2sBolshaya%20Konyushennaya%20St%2C%2019%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1754684041879!5m2!1sen!2sru" width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" onerror="this.closest('.footer__map-container').classList.add('footer__map-container--error')">
-      </iframe>
-      <div class="footer__map-fallback">
-        <picture>
-          <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="./images/map-index-desktop@1x.jpg 1x, ./images/map-index-desktop@2x.jpg 2x">
-          <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="./images/map-index-tablet@1x.jpg 1x, ./images/map-index-tablet@2x.jpg 2x">
-          <img class="footer__map-fallback-image" src="./images/location-background-mobile@1x.png" srcset="./images/location-background-mobile@2x.png 2x" width="320" height="362" alt="Карта расположения офиса">
-        </picture>
-      </div>
-    </div>
-    <div class="footer__wrapper-socials">
+    <iframe class="footer__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991047846933!2d30.32050837715263!3d59.9387941749152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0xa24b26c0d196de71!2sBolshaya%20Konyushennaya%20St%2C%2019%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1754684041879!5m2!1sen!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="footer__wrapper--socials">
       <a class="footer__logo" href="./index.html" aria-label="Перейти на главную страницу">
         <img class="footer__logo-text" src="./images/footer-text-logo.svg" width="128" height="24" alt="Логотип «Кэт энерджи»">
       </a>
